# aiclaude-configurator

./: .gitignore  CONFIG-PATHS.md  DESIGN.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clients/: claude_code.rs  codex.rs  cursor.rs  mod.rs  openclaw.rs  opencode.rs  vscode.rs
src/components/: ConfigurePage.tsx  ResultPage.tsx  SettingsPage.tsx  Sidebar.tsx
